refactor: work on remarks